Intent Login to Dashoboard.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">TibetanHandicraftPurchasingApplication</string>
+    <string name="app_name">Tibetan Shop</string>
 </resources>
